[package]
name = "drm-fourcc"
version = "0.1.0"
authors = ["Daniel Franklin <daniel@danielzfranklin.org>"]
edition = "2018"
license = "MIT"
description = "Provides an enum with every valid Direct Rendering Manager (DRM) format fourcc"
repository = "https://github.com/danielzfranklin/evdi-rs"
keywords = ["drm", "fourcc", "linux"]
categories = ["os::linux-apis"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
regex = "1.4.3"
bindgen = "0.57.0"
